--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
   "homepage": "https://github.com/natelandrum/CSE-341-Project2#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mongodb": "^6.5.0",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "swagger-ui-express": "^5.0.0",
     "validatorjs": "^3.22.1"
   },
